<resources>
    <string name="app_name">Sintesis</string>
    <string name="pref_header_display">Display</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_key">theme_pref</string>
    <string name="pref_theme_summary">Change the app theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_system">System default</string>
    <string-array name="theme_entries">
        <item>@string/pref_theme_light</item>
        <item>@string/pref_theme_dark</item>
        <item>@string/pref_theme_system</item>
    </string-array>
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>
    <string name="search_button">Search</string>
    <string name="search_hint">Search articles...</string>
    <string name="menu_home">Home</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_profile">Profile</string>
    <string name="latest_articles">Latest Articles</string>
    <string name="popular_articles">Popular Articles</string>
    <string name="bookmarked_articles">Bookmarked Articles</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="category_sports">Sports</string>
    <string name="category_tech">Technology</string>
    <string name="category_news">News</string>
    <string name="category_health">Health</string>
    <string name="category_lifestyle">Lifestyle</string>
    <string name="category_business">Business</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="subcategory_labels">Technology</string>
    <string name="subcategory_football">Football</string>
    <string name="subcategory_basketball">Basketball</string>
    <string name="subcategory_tennis">Tennis</string>
    <string name="subcategory_smartphones">Smartphones</string>
    <string name="subcategory_laptops">Laptops</string>
    <string name="subcategory_gadgets">Gadgets</string>
    <string name="subcategory_android">Android</string>
    <string name="subcategory_ios">iOS</string>
    <string name="subcategory_web">Web Development</string>
    <string name="subcategory_ai">Artificial Intelligence</string>
    <string name="subcategory_world">World</string>
    <string name="subcategory_politics">Politics</string>
    <string name="subcategory_business">Business</string>
    <string name="subcategory_technology">Technology</string>
    <string name="subcategory_economy">Economy</string>
    <string name="subcategory_sustainability">Sustainability</string>
    <string name="subcategory_finance">Finance</string>
    <string name="subcategory_fitness">Fitness</string>
    <string name="subcategory_nutrition">Nutrition</string>
    <string name="subcategory_mental_health">Mental Health</string>
    <string name="subcategory_travel">Travel</string>
    <string name="subcategory_food">Food</string>
    <string name="subcategory_fashion">Fashion</string>
    <string name="categories">Categories</string>
    <string-array name="category_ids">
        <item>sports</item>
        <item>tech</item>
        <item>news</item>
        <item>health</item>
        <item>lifestyle</item>
        <item>business</item>
    </string-array>
    <string-array name="subcategories_sports">
        <item>@string/subcategory_football</item>
        <item>@string/subcategory_basketball</item>
        <item>@string/subcategory_tennis</item>
    </string-array>
    <string-array name="subcategory_ids_sports">
        <item>football</item>
        <item>basketball</item>
        <item>tennis</item>
    </string-array>
    <string-array name="subcategories_tech">
        <item>@string/subcategory_smartphones</item>
        <item>@string/subcategory_laptops</item>
        <item>@string/subcategory_gadgets</item>
        <item>@string/subcategory_android</item>
        <item>@string/subcategory_ios</item>
        <item>@string/subcategory_web</item>
        <item>@string/subcategory_ai</item>
    </string-array>
    <string-array name="subcategory_ids_tech">
        <item>smartphones</item>
        <item>laptops</item>
        <item>gadgets</item>
        <item>android</item>
        <item>ios</item>
        <item>web</item>
        <item>ai</item>
    </string-array>
    <string-array name="subcategories_news">
        <item>@string/subcategory_world</item>
        <item>@string/subcategory_politics</item>
        <item>@string/subcategory_business</item>
        <item>@string/subcategory_technology</item>
        <item>@string/subcategory_economy</item>
    </string-array>
    <string-array name="subcategory_ids_news">
        <item>world</item>
        <item>politics</item>
        <item>business</item>
        <item>technology</item>
        <item>economy</item>
    </string-array>
    <string-array name="subcategories_health">
        <item>@string/subcategory_sustainability</item>
        <item>@string/subcategory_finance</item>
        <item>@string/subcategory_fitness</item>
        <item>@string/subcategory_nutrition</item>
        <item>@string/subcategory_mental_health</item>
    </string-array>
    <string-array name="subcategory_ids_health">
        <item>sustainability</item>
        <item>finance</item>
        <item>fitness</item>
        <item>nutrition</item>
        <item>mental_health</item>
    </string-array>
    <string-array name="subcategories_lifestyle">
        <item>@string/subcategory_travel</item>
        <item>@string/subcategory_food</item>
        <item>@string/subcategory_fashion</item>
    </string-array>
    <string-array name="subcategory_ids_lifestyle">
        <item>travel</item>
        <item>food</item>
        <item>fashion</item>
    </string-array>
    <string name="category_articles">%1$s Articles</string>
    <string name="no_articles_found">No articles found</string>
    <string name="subcategory_articles">%1$s Articles</string>
    <string name="article_count">%1$d articles</string>
    <string name="view_all">View All</string>
    <string name="load_more">Load More Articles</string>
    <string name="login_title">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_error">Invalid email or password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup_error">Error creating account</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_name">Please enter your name</string>
    <string name="post_comment">Post</string>
    <string name="no_comments">No comments yet. Be the first to comment!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="guest_user">Guest User</string>
    <string name="guest_email_hint">Sign in to view your profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="appearance">Appearance</string>
    <string name="dark_theme">Dark theme</string>
    <string name="follow_system_theme">Use system default theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System default</string>
    <string name="theme_set_to">Theme set to %s</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_relevance">Relevance</string>
    <string name="sort_date_newest">Newest First</string>
    <string name="sort_date_oldest">Oldest First</string>
    <string name="sort_popularity">Most Popular</string>
    <string name="date_range">Date Range</string>
    <string name="select_date_range">Select date range</string>
    <string name="date_range_all_time">All Time</string>
    <string name="date_range_24_hours">Last 24 Hours</string>
    <string name="date_range_week">Last Week</string>
    <string name="date_range_month">Last Month</string>
    <string name="date_range_year">Last Year</string>
    <string-array name="date_ranges">
        <item>@string/date_range_all_time</item>
        <item>@string/date_range_24_hours</item>
        <item>@string/date_range_week</item>
        <item>@string/date_range_month</item>
        <item>@string/date_range_year</item>
    </string-array>
    <string name="clear_all">Clear All</string>
    <string name="no_articles">No articles found</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="loading">Loading...</string>
    <string name="error_loading">Error loading content. Please try again.</string>
    <string name="error_no_internet_connection">No internet connection. Please check your network settings and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="article_image">Article image</string>
    <string name="author_image">Author image</string>
    <string name="bookmark_article">Bookmark this article</string>
    <string name="like_article">Like this article</string>
    <string name="share_article">Share article</string>
    <string name="minutes_read">%d min read</string>
    <string name="read_more">Read more</string>
    <string name="related_articles">Related Articles</string>
    <string name="article_published">Published %s</string>
    <string name="searching_for">Searching for: %s</string>
    <string name="welcome_message">Welcome to Sintesis</string>
    <string name="articles_in_subcategory">Articles in %s - %s</string>
    <string name="comments_section">Comments</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="views_count">%d views</string>
    <string name="likes_count">%d likes</string>
    <string name="shares_count">%d shares</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="search_results_for">Search results for "%1$s"</string>
    <string name="no_search_results">No results found for "%1$s"</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter By</string>
    <string name="subcategories">Subcategories</string>
    <string name="filter_results">Filter Results</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
</resources>